--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <p>I am cheaking today that, is everything okay ? I will start the assignment from tommorow.</p>
 </body>
 </html>
