first page done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
         <section class="average-size header-content disply-flex">
             <div class="content-1 color-1">
-                <h1>Get body in <span id="miama-font">shape</span> & stay healthy</h1>
+                <h1>Get body in <i><span id="miama-font">shape</span></i> & stay healthy</h1>
                 <p class="color-2">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
                 <button class="primary-btn">Join Club Now!</button>
                 <button id="secondary-btn" class="primary-btn">Download App</button>
@@ -38,7 +38,7 @@
                 <div class="disply-flex">
                     
                     <div class="video" id="paid">
-                        <div id="circle"><i class="fa-solid fa-play"></i></div>
+                        <i id="play-btn" class="fa-solid fa-circle-play"></i>
                         <h4 class="color-1">350+</h4>
                         <p class="color-2">Video tutorial</p>
                     </div>
