second page done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="average-size header-content disply-flex">
             <div class="content-1 color-1">
                 <h1>Get body in <i><span id="miama-font">shape</span></i> & stay healthy</h1>
-                <p class="color-2">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <p id="header-para" class="color-2">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
                 <button class="primary-btn">Join Club Now!</button>
                 <button id="secondary-btn" class="primary-btn">Download App</button>
             </div>
@@ -50,5 +50,44 @@
             </div>
         </section>
     </header>
+
+    <!-- second page layout -->
+
+    <section class="average-size">
+        <div class="center second-title">
+            <h3 class="color-1 auto-margin">Change Your Habits</h3>
+            <p class="color-2 auto-margin">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        </div>
+        <div class="disply-flex img-section">
+            <div class="img-container">
+                <img class="circle-img" src="images/image 3.png" alt="">
+                <div class="content-box center">
+                    <h5 class="auto-margin color-1">Movement</h5>
+                    <p class="auto-margin color-2">Firstly you need to move your wholl body parts to change.</p>
+                </div>
+            </div>
+            <div class="img-container">
+                <img class="circle-img" src="images/image 2.png" alt="">
+                <div class="content-box center">
+                    <h5 class="auto-margin color-1">Time</h5>
+                    <p class="auto-margin color-2">You have to use your time wisely.</p>
+                </div>
+            </div>
+            <div class="img-container">
+                <img class="circle-img" src="images/image 4.png" alt="">
+                <div class="content-box center">
+                    <h5 class="auto-margin color-1">Practice</h5>
+                    <p class="auto-margin color-2">Practice makes a man perfect. So you heve to keept practicing.</p>
+                </div>
+            </div>
+            <div class="img-container">
+                <img class="circle-img" src="images/image 5.png" alt="">
+                <div class="content-box center">
+                    <h5 class="auto-margin color-1">Weight Loss</h5>
+                    <p class="auto-margin color-2">Your weight will loss, if you do it regularly.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
