3rd page is done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
 <body class="full-size">
     <!-- <div><i class="fa-solid fa-bars"></i></div>
@@ -36,7 +36,6 @@
             <div id="img-content" class="content-2">
                 <img src="images/Images 2.png" alt="">
                 <div class="disply-flex">
-                    
                     <div class="video" id="paid">
                         <i id="play-btn" class="fa-solid fa-circle-play"></i>
                         <h4 class="color-1">350+</h4>
@@ -88,6 +87,18 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- third page layout -->
+
+    <section id="runner-container" class="disply-flex average-size">
+        <div id="runner-content">
+            <h3 class="color-1">Run an Extra 
+                Mile Easily</h3>
+            <p class="color-2">Health benefits of running and joggingstrengthen muscles. improve cardiovascular fitness. burn plenty of kilojoules. help maintain a healthy weight.</p>
+            <button id="runner-btn" class="primary-btn">Join Now</button>
+        </div>
+        <img src="images/runner.png" alt="">
     </section>
 </body>
 </html>
