this is a test commit

--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
         </div>
         <img src="images/run.jpg" alt="">
     </section>
+    <section class="about-bmi-calculator">
+        <h3 class="color-1">BMI Calculator</h3>
+        <p class="color-2">BMI is calculated by dividing your weight in kilograms by your height in metres squared</p>
+    </section>
 
     <!-- BMI Calculator -->
 
@@ -153,8 +157,56 @@
             </div>
         </div>
     </section>
-    <script>
+
+    <!-- meet our team section -->
+
+    <section class="average-size">
+        <div id="trainer-heading">
+            <h2 class="color-1">Meet Our Team</h2>
+            <p class="color-2">There are some member of our team which are high-lighted in bellow.</p>
+        </div>
+        <div id="trainer-img-section" class="display-grid">
+            <div class="trainer-img" id="trainer-1">
+                <div>
+                    <h5 class="color-1">Jerome Bell</h5>
+                    <p class="color-2">Trainer</p>
+                </div>
+            </div>
+            <div class="trainer-img" id="trainer-2">
+                <div>
+                    <h5 class="color-1">Cameron Willing</h5>
+                    <p class="color-2">Trainer</p>
+                </div>
+            </div>
+            <div class="trainer-img" id="trainer-3">
+                <div>
+                    <h5 class="color-1">Darrel Steward</h5>
+                    <p class="color-2">Trainer</p>
+                </div>
+            </div>
+            <div class="trainer-img" id="trainer-4">
+                <div>
+                    <h5 class="color-1">Dianne Russsell</h5>
+                    <p class="color-2">Trainer</p>
+                </div>
+            </div>
+            <div class="trainer-img" id="trainer-5">
+                <div>
+                    <h5 class="color-1">Cody Fisher</h5>
+                    <p class="color-2">Trainer</p>
+                </div>
+            </div>
+            <div class="trainer-img" id="trainer-6">
+                <div>
+                    <h5 class="color-1">Theresa Webb</h5>
+                    <p class="color-2">Trainer</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- <script>
         alert("Welcome to my web page.");
-    </script>
+    </script> -->
 </body>
 </html>
