login form is completed

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <h3 class="color-3"><i>Fitness</i></h3>
             <nav>
                 <ul>
-                    <li class="menu-item" id="home"><a href="">Home</a></li>
-                    <li class="menu-item"><a href="">Service</a></li>
-                    <li class="menu-item"><a href="">Contact</a></li>
-                    <li class="menu-item"><a href="">About</a></li>
-                    <li class="menu-item"><a href="">Login</a></li>
+                    <li class="menu-item" id="home"><a class="mouse" href="">Home</a></li>
+                    <li class="menu-item"><a class="mouse" href="">Service</a></li>
+                    <li class="menu-item"><a class="mouse" href="">Contact</a></li>
+                    <li class="menu-item"><a class="mouse" href="">About</a></li>
+                    <li class="menu-item"><a class="mouse" href="#full-form">Login</a></li>
                     <li class="color-1"><i id="menu-bar" class="fa-solid fa-bars"></i></li>
                 </ul>
             </nav>
@@ -98,7 +98,7 @@
             <p class="color-2">Health benefits of running and joggingstrengthen muscles. improve cardiovascular fitness. burn plenty of kilojoules. help maintain a healthy weight.</p>
             <button id="runner-btn" class="primary-btn mouse">Join Now</button>
         </div>
-        <img src="images/run.jpg" alt="">
+        <img src="images/runner.png" alt="">
     </section>
     <section class="about-bmi-calculator">
         <h3 class="color-1">BMI Calculator</h3>
@@ -204,6 +204,24 @@
             </div>
         </div>
     </section>
+
+    <!-- login form -->
+
+    <form id="full-form" class="full-size">
+        <div class="login-form">
+            <h1 class="color-1">Login</h1>
+            <div id="information">
+                <p class="color-1">E-mail Address:</p>
+                <input class="input-form" type="email" placeholder="Enter Your E-mail Address">
+                <p class="color-1">Your Password:</p>
+                <input class="input-form" type="password" placeholder="Enter Your Password">
+                <br>
+                <button class="login-btn" type="submit">Login</button>
+                <a href="">Forgot Password?</a>
+                <p id="sign-up" class="color-1">Doesn't have an account yet. <a href="">Click here to sign up!</a></p>
+            </div>
+        </div>
+    </form>
 
     <!-- <script>
         alert("Welcome to my web page.");
