assignment is finished

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NBG</title>
+    <title>Fitness</title>
+    <link rel="shortcut icon" href="images/fitness-logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
@@ -222,6 +223,33 @@
             </div>
         </div>
     </form>
+
+    <!-- footer section -->
+
+    <footer id="footer" class="full-size">
+        <section id="footer-section" class="average-size">
+            <div>
+                <h1 class="color-3"><i>Fitness</i></h1>
+                <p id="fitness-paragraph" class="color-2">Fitness is important not only for medical reasons. Being physically fit not only brings the exercise done to maintain physical fitness is stress relieving and helps you sleep better at night.</p>
+            </div>
+            <div>
+                <h3 class="color-1">Get Started</h3>
+                <p class="common-para color-2">Service</p>
+                <p class="common-para color-2">Contact Us</p>
+                <p class="common-para color-2">Affiliate Program</p>
+                <p class="common-para color-2">About Us</p>
+            </div>
+            <div>
+                <h3 class="color-1">Get Started</h3>
+                <p class="common-para color-2">Platform</p>
+                <p class="common-para color-2">Fitness</p>
+                <p class="common-para color-2">Workout Libary</p>
+                <p class="common-para color-2">App Design</p>
+            </div>
+        </section>
+        <hr class="average-size">
+        <p class="copy-right color-2">&copy;All right reserved @Fitness 2024</p>
+    </footer>
 
     <!-- <script>
         alert("Welcome to my web page.");
