--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
         <p class="copy-right color-2">&copy;All right reserved @Fitness 2024</p>
     </footer>
 
-    <!-- <script>
+    <script>
         alert("Welcome to my web page.");
-    </script> -->
+    </script>
 </body>
 </html>
